# AndroidNDKOpenGLResearch

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/scenes/: loading_scene.json  multitouch_test_scene.json  rendering_engine_dev_scene.json  scenes_selection_scene.json
app/src/main/assets/shaders/light/: directionalLightFragmentShader.glsl  directionalLightVertexShader.glsl  gradientAmbientFragmentShader.glsl
app/src/main/assets/shaders/text/: textFragmentShader.glsl  textVertexShadre.glsl
app/src/main/assets/shaders/unlit/: gradientFragmentShader.glsl  unlitFragmentShader.glsl  unlitVertexShader.glsl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/engine_3d/: AmbientLightComponent.cpp  AmbientLightComponent.h  AppStateRepository.h  BaseClass.h  BulletPhysicsEngine.cpp  BulletPhysicsEngine.h  CameraComponent.cpp  CameraComponent.h  Character.h  CollisionsInfoComponent.cpp  CollisionsInfoComponent.h  Constants.h  CycleInterpolator.cpp  CycleInterpolator.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  DisplayInfo.cpp  DisplayInfoUpdateDetector.cpp  DisplayInfoUpdateDetector.h  FontDataLoader.h  FsAbstraction.h  GameObject.cpp  GameObject.h  GameObjectComponent.cpp  GameObjectComponent.h  ImageButtonComponent.cpp  ImageButtonComponent.h  Interpolator.h  LayoutComponent.cpp  LayoutComponent.h  LayoutParams.h  Material.h  MaterialComponent.cpp  MaterialComponent.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  MeshRendererFactory.h  MeshStorage.h  (+51 more)
app/src/main/cpp/engine_3d/skeletal_animation/: Joint.h  KeyFrame.h  SkeletalAnimation.h  SkeletalAnimationComponent.cpp  SkeletalAnimationComponent.h  SkeletalAnimationPlayerComponent.cpp  SkeletalAnimationPlayerComponent.h
app/src/main/cpp/engine_3d/touch_screen/: ClickDetectorComponent.cpp  GestureConsumerComponent.cpp  GesturesDispatcher.cpp  GesturesDispatcher.h  ScrollDetectorComponent.cpp  TouchScreen.h
app/src/main/cpp/game/: BitmapDataLoader.h  CharactersRepository.h  DisplayInfo.h  FontDataLoader.h  FpsCalculator.cpp  FpsCalculator.h  FreeFlyCameraController.cpp  FreeFlyCameraController.h  Joystick.h  LocalTimeRepository.cpp  LocalTimeRepository.h  MeshLoadingRepository.h  MeshRendererFactory.h  MeshStorage.cpp  MeshStorage.h  MessageQueue.cpp  MessageQueue.h  ObjectPool.h  PlayerController.cpp  PlayerController.h  Scene.cpp  Scene.h  SceneDataLoader.cpp  SceneLoader.cpp  SceneLoader.h  SceneManager.h  SimpleJoystick.cpp  SimpleJoystick.h  SkeletalAnimationLoadingRepository.h  TextRendererFactory.h  TexturesRepository.h  TimeProvider.cpp  TimeProvider.h  UnitsConverter.cpp  UnitsConverter.h
app/src/main/cpp/game/dev_scenes/: LoadingScene.cpp  LoadingScene.h  MultitouchTestScene.cpp  MultitouchTestScene.h  RenderingEngineDevScene.cpp  RenderingEngineDevScene.h  SceneCloser.cpp  SceneCloser.h  ScenesSelectionScene.cpp  ScenesSelectionScene.h  ScreenBlinkingScene.cpp  ScreenBlinkingScene.h
app/src/main/cpp/game/rendering_engine/: OpenGLState.cpp  OpenGLState.h  RenderingEngine.cpp  RenderingEngine.h
app/src/main/cpp/game/touch_screen/: ClickDetectorComponent.cpp  ClickDetectorComponent.h  GestureConsumerComponent.cpp  GestureConsumerComponent.h  GesturesDispatcher.cpp  GesturesDispatcher.h  ScrollDetectorComponent.h  TouchEvent.h  TouchEventType.h  TouchScreen.cpp  TouchScreen.h
app/src/main/cpp/main/: AndroidBitmapDataLoader.cpp  AndroidBitmapDataLoader.h  AndroidDisplayInfo.cpp  AndroidDisplayInfo.h  AndroidFontDataLoader.cpp  AndroidFontDataLoader.h  AndroidFsAbstraction.cpp  AndroidFsAbstraction.h  AndroidMediaPlayerMusicPlayer.cpp  AndroidMediaPlayerMusicPlayer.h  AndroidMeshLoadingRepository.cpp  AndroidMeshLoadingRepository.h  AndroidMeshRendererComponent.cpp  AndroidMeshRendererComponent.h  AndroidMeshRendererFactory.cpp  AndroidMeshRendererFactory.h  AndroidOpenALSoundScene.cpp  AndroidOpenALSoundScene.h  AndroidReadOnlyFsAbstraction.cpp  AndroidReadOnlyFsAbstraction.h  AndroidSceneDataLoader.cpp  AndroidSceneDataLoader.h  AndroidShaderSourceRepository.cpp  AndroidShaderSourceRepository.h  AndroidSkeletalAnimationLoadingRepository.cpp  AndroidSkeletalAnimationLoadingRepository.h  AndroidSoundLoadingRepository.cpp  AndroidSoundLoadingRepository.h  AndroidTouchScreen.cpp  AndroidTouchScreen.h  AndroidUnitsConverter.cpp  AndroidUnitsConverter.h  Constants.h  GameWrapper.cpp  GameWrapper.h  L.cpp  L.h  OpenGLErrorDetector.cpp  OpenGLErrorDetector.h
app/src/main/cpp/main/android_mesh_loading_repository/: AssimpIndex.cpp  AssimpIndex.h
app/src/main/cpp/main/rendering_engine/: BufferCreationParams.h  IboInfo.h  OpenGLFreeTypeCharactersRepository.cpp  OpenGLFreeTypeCharactersRepository.h  OpenGLFreeTypeTextRendererComponent.cpp  OpenGLFreeTypeTextRendererComponent.h  OpenGLGeometryBuffersStorage.cpp  OpenGLGeometryBuffersStorage.h  OpenGLTextRendererFactory.cpp  OpenGLTextRendererFactory.h  OpenGLTexturesRepository.cpp  OpenGLTexturesRepository.h  OpenGLVerticalQuadBuffersRepository.cpp  OpenGLVerticalQuadBuffersRepository.h  OpenGlMeshRendererComponent.cpp  OpenGlMeshRendererComponent.h  OpenGlMeshRendererFactory.cpp  OpenGlMeshRendererFactory.h  OpenGlShaderProgramContainer.cpp  OpenGlShaderProgramContainer.h  OpenGlShadersRepository.cpp  OpenGlShadersRepository.h  RenderingEngine.cpp  RenderingEngine.h  ShaderCreationParams.h  ShaderSourcePreprocessor.cpp  ShaderSourcePreprocessor.h  ShaderSourceRepository.h  TextureCreationParams.h  TextureInfo.h
app/src/main/java/ilapin/opengl_research/: AppState.kt  BitmapInfo.kt  GLSurfaceViewRenderer.kt  MainActivity.kt  TouchEvent.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
